Fix figure spacing

--- a/_sass/common/_elements.scss
+++ b/_sass/common/_elements.scss
@@ -446,8 +446,7 @@ figure {
   background: $color-background;
 
   @include respond-to($breakpoint-large) {
-    padding: 1rem 1rem 0;
-    margin: 0 -1rem;
+    padding: $gutter $gutter 0;
   }
 }
 
